Update case studies to the new API.

--- a/example/case-study/t-cell-signalling/main.ipynb
+++ b/example/case-study/t-cell-signalling/main.ipynb
@@ -46,7 +46,15 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Detected IPython (`ZMQInteractiveShell`). Log level set to `LOG_ESSENTIAL`.\n"
+     ]
+    }
+   ],
    "source": [
     "from biodivine_aeon import *"
    ]
@@ -67,7 +75,7 @@
     "model.set_update_function(\"CD45\", \"false\")\n",
     "model.set_update_function(\"TAX\", \"false\")\n",
     "\n",
-    "graph = SymbolicAsyncGraph(model)"
+    "graph = AsynchronousGraph(model)"
    ]
   },
   {
@@ -96,15 +104,155 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Start interleaved transition guided reduction with 1152921504606847000[nodes:2] candidates.\n",
       "Attractors: 3\n",
-      "A1: 1.0\n",
-      "A2: 4.0\n",
-      "A3: 4.0\n"
+      "A1: 1\n",
+      "A2: 4\n",
+      "A3: 4\n",
+      " > Discarded 576460752303423500 instances based on the BnVariable(52) extended component.\n",
+      " > State space reduced to 576460752303423500[nodes:3].\n",
+      " > Discarded 288230376151711740 instances based on the BnVariable(51) extended component.\n",
+      " > State space reduced to 288230376151711740[nodes:4].\n",
+      " > Discarded 144115188075855870 instances based on the BnVariable(50) extended component.\n",
+      " > State space reduced to 144115188075855870[nodes:5].\n",
+      " > Discarded 72057594037927940 instances based on the BnVariable(38) extended component.\n",
+      " > State space reduced to 72057594037927940[nodes:6].\n",
+      " > Discarded 36028797018963970 instances based on the BnVariable(24) extended component.\n",
+      " > State space reduced to 36028797018963970[nodes:7].\n",
+      " > Discarded 18014398509481984 instances based on the BnVariable(4) extended component.\n",
+      " > State space reduced to 18014398509481984[nodes:8].\n",
+      " > Discarded 9007199254740992 instances based on the BnVariable(47) extended component.\n",
+      " > State space reduced to 9007199254740992[nodes:9].\n",
+      " > Discarded 4503599627370496 instances based on the BnVariable(17) extended component.\n",
+      " > State space reduced to 4503599627370496[nodes:10].\n",
+      " > Discarded 3377697505935360 instances based on the BnVariable(54) extended component.\n",
+      " > State space reduced to 1125902121435136[nodes:96].\n",
+      " > Discarded 562949953421312 instances based on the BnVariable(44) extended component.\n",
+      " > State space reduced to 562952168013824[nodes:97].\n",
+      " > Discarded 281474976710656 instances based on the BnVariable(48) extended component.\n",
+      " > State space reduced to 281477191303168[nodes:98].\n",
+      " > Discarded 0 instances using the BnVariable(11) transition basin.\n",
+      " > Discarded 140737488355328 instances based on the BnVariable(11) extended component.\n",
+      " > State space reduced to 140739702947840[nodes:99].\n",
+      " > Discarded 0 instances using the BnVariable(8) transition basin.\n",
+      " > Discarded 70368744177664 instances based on the BnVariable(8) extended component.\n",
+      " > State space reduced to 70370958770176[nodes:100].\n",
+      " > Discarded 0 instances using the BnVariable(30) transition basin.\n",
+      " > Discarded 35184372088832 instances based on the BnVariable(30) extended component.\n",
+      " > State space reduced to 35186586681344[nodes:101].\n",
+      " > Discarded 0 instances using the BnVariable(40) transition basin.\n",
+      " > Discarded 17592186044416 instances based on the BnVariable(40) extended component.\n",
+      " > State space reduced to 17594400636928[nodes:102].\n",
+      " > Discarded 0 instances using the BnVariable(32) transition basin.\n",
+      " > Discarded 8796093022208 instances based on the BnVariable(32) extended component.\n",
+      " > State space reduced to 8798307614720[nodes:103].\n",
+      " > Discarded 0 instances using the BnVariable(2) transition basin.\n",
+      " > Discarded 4398046511104 instances based on the BnVariable(2) extended component.\n",
+      " > State space reduced to 4400261103616[nodes:104].\n",
+      " > Discarded 0 instances using the BnVariable(29) transition basin.\n",
+      " > Discarded 2199023255552 instances based on the BnVariable(29) extended component.\n",
+      " > State space reduced to 2201237848064[nodes:105].\n",
+      " > Discarded 1099511627776 instances based on the BnVariable(49) extended component.\n",
+      " > State space reduced to 1101726220288[nodes:106].\n",
+      " > Discarded 0 instances using the BnVariable(10) transition basin.\n",
+      " > Discarded 549755813888 instances based on the BnVariable(10) extended component.\n",
+      " > State space reduced to 551970406400[nodes:107].\n",
+      " > Discarded 274877906944 instances based on the BnVariable(39) extended component.\n",
+      " > State space reduced to 277092499456[nodes:108].\n",
+      " > Discarded 0 instances using the BnVariable(7) transition basin.\n",
+      " > Discarded 137438953472 instances based on the BnVariable(7) extended component.\n",
+      " > State space reduced to 139653545984[nodes:109].\n",
+      " > Discarded 0 instances using the BnVariable(35) transition basin.\n",
+      " > Discarded 68719476736 instances based on the BnVariable(35) extended component.\n",
+      " > State space reduced to 70934069248[nodes:110].\n",
+      " > Discarded 1409286144 instances using the BnVariable(12) transition basin.\n",
+      " > State space reduced to 69524783104[nodes:67].\n",
+      " > Discarded 0 instances using the BnVariable(59) transition basin.\n",
+      " > Discarded 34359738368 instances based on the BnVariable(59) extended component.\n",
+      " > State space reduced to 35165044736[nodes:68].\n",
+      " > Discarded 0 instances using the BnVariable(14) transition basin.\n",
+      " > Discarded 17179869184 instances based on the BnVariable(14) extended component.\n",
+      " > State space reduced to 17985175552[nodes:69].\n",
+      " > Discarded 0 instances using the BnVariable(1) transition basin.\n",
+      " > Discarded 0 instances based on the BnVariable(1) extended component.\n",
+      " > Discarded 8858370048 instances based on the BnVariable(41) extended component.\n",
+      " > State space reduced to 9126805504[nodes:59].\n",
+      " > Discarded 4294967296 instances based on the BnVariable(53) extended component.\n",
+      " > State space reduced to 4831838208[nodes:60].\n",
+      " > Discarded 2147483648 instances based on the BnVariable(45) extended component.\n",
+      " > State space reduced to 2684354560[nodes:61].\n",
+      " > Discarded 1073741824 instances based on the BnVariable(33) extended component.\n",
+      " > State space reduced to 1610612736[nodes:62].\n",
+      " > Discarded 536870912 instances based on the BnVariable(28) extended component.\n",
+      " > State space reduced to 1073741824[nodes:63].\n",
+      " > Discarded 268435456 instances based on the BnVariable(16) extended component.\n",
+      " > State space reduced to 805306368[nodes:64].\n",
+      " > Discarded 402653184 instances based on the BnVariable(21) extended component.\n",
+      " > State space reduced to 402653184[nodes:66].\n",
+      " > Discarded 201326592 instances based on the BnVariable(18) extended component.\n",
+      " > State space reduced to 201326592[nodes:68].\n",
+      " > Discarded 100663296 instances based on the BnVariable(34) extended component.\n",
+      " > State space reduced to 100663296[nodes:70].\n",
+      " > Discarded 50331648 instances based on the BnVariable(37) extended component.\n",
+      " > State space reduced to 50331648[nodes:72].\n",
+      " > Discarded 25165824 instances based on the BnVariable(19) extended component.\n",
+      " > State space reduced to 25165824[nodes:74].\n",
+      " > Discarded 12582912 instances based on the BnVariable(12) extended component.\n",
+      " > State space reduced to 12582912[nodes:76].\n",
+      " > Discarded 6291456 instances based on the BnVariable(0) extended component.\n",
+      " > State space reduced to 6291456[nodes:78].\n",
+      " > Discarded 3145728 instances based on the BnVariable(13) extended component.\n",
+      " > State space reduced to 3145728[nodes:80].\n",
+      " > Discarded 1572864 instances based on the BnVariable(9) extended component.\n",
+      " > State space reduced to 1572864[nodes:82].\n",
+      " > Discarded 786432 instances based on the BnVariable(43) extended component.\n",
+      " > State space reduced to 786432[nodes:84].\n",
+      " > Discarded 393216 instances based on the BnVariable(55) extended component.\n",
+      " > State space reduced to 393216[nodes:86].\n",
+      " > Discarded 196608 instances based on the BnVariable(15) extended component.\n",
+      " > State space reduced to 196608[nodes:88].\n",
+      " > Discarded 98304 instances based on the BnVariable(25) extended component.\n",
+      " > State space reduced to 98304[nodes:90].\n",
+      " > Discarded 49152 instances based on the BnVariable(23) extended component.\n",
+      " > State space reduced to 49152[nodes:92].\n",
+      " > Discarded 24576 instances based on the BnVariable(20) extended component.\n",
+      " > State space reduced to 24576[nodes:94].\n",
+      " > Discarded 12288 instances based on the BnVariable(57) extended component.\n",
+      " > State space reduced to 12288[nodes:96].\n",
+      " > Discarded 6144 instances based on the BnVariable(46) extended component.\n",
+      " > State space reduced to 6144[nodes:98].\n",
+      " > Discarded 3072 instances based on the BnVariable(42) extended component.\n",
+      " > State space reduced to 3072[nodes:100].\n",
+      " > Discarded 1536 instances based on the BnVariable(58) extended component.\n",
+      " > State space reduced to 1536[nodes:102].\n",
+      " > Discarded 768 instances based on the BnVariable(56) extended component.\n",
+      " > State space reduced to 768[nodes:104].\n",
+      " > Discarded 384 instances based on the BnVariable(27) extended component.\n",
+      " > State space reduced to 384[nodes:106].\n",
+      " > Discarded 192 instances based on the BnVariable(26) extended component.\n",
+      " > State space reduced to 192[nodes:108].\n",
+      " > Discarded 96 instances based on the BnVariable(3) extended component.\n",
+      " > State space reduced to 96[nodes:110].\n",
+      " > Discarded 48 instances based on the BnVariable(22) extended component.\n",
+      " > State space reduced to 48[nodes:112].\n",
+      " > Discarded 8 instances based on the BnVariable(36) extended component.\n",
+      " > State space reduced to 40[nodes:113].\n",
+      " > Discarded 20 instances based on the BnVariable(5) extended component.\n",
+      " > State space reduced to 20[nodes:115].\n",
+      " > Discarded 10 instances based on the BnVariable(31) extended component.\n",
+      " > State space reduced to 10[nodes:117].\n",
+      " > Discarded 1 instances based on the BnVariable(6) extended component.\n",
+      "Interleaved transition guided reduction finished with 9[nodes:118] candidates.\n",
+      "Start Xie-Beerel attractor detection on 9[nodes:118] candidates.\n",
+      " > Found a bottom SCC: 1x1[nodes:62].\n",
+      " > Found a bottom SCC: 4x1[nodes:60].\n",
+      " > Found a bottom SCC: 4x1[nodes:60].\n",
+      "Attractor detection finished with 3 results.\n"
      ]
     }
    ],
    "source": [
-    "attractors = find_attractors(graph)\n",
+    "attractors = Attractors.attractors(graph)\n",
     "\n",
     "print(\"Attractors:\", len(attractors))\n",
     "\n",
@@ -181,12 +329,12 @@
     }
    ],
    "source": [
-    "apoptosis = graph.fix_variable(\"Apoptosis\", True)\n",
-    "proliferation = graph.fix_variable(\"Proliferation\", True)\n",
-    "cytoskeleton = graph.fix_variable(\"Cytoskeleton_signaling\", True)\n",
-    "tcr = graph.fix_variable(\"TCR\", True)\n",
-    "ctla4 = graph.fix_variable(\"CTLA4\", True)\n",
-    "p2 = graph.fix_variable(\"P2\", True)\n",
+    "apoptosis = graph.mk_subspace({\"Apoptosis\": True})\n",
+    "proliferation = graph.mk_subspace({\"Proliferation\": True})\n",
+    "cytoskeleton = graph.mk_subspace({\"Cytoskeleton_signaling\": True})\n",
+    "tcr = graph.mk_subspace({\"TCR\": True})\n",
+    "ctla4 = graph.mk_subspace({\"CTLA4\": True})\n",
+    "p2 = graph.mk_subspace({\"P2\": True})\n",
     "\n",
     "print(\"==== A1 Phenotypes ====\")\n",
     "print(\"A1[Apoptosis] is always True:\", A1.minus(apoptosis).is_empty())\n",
@@ -254,23 +402,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Start basic symbolic reachability with 1[nodes:62] candidates.\n",
       "A1 strong basin: 50.04911422729492 %\n",
       "A1[Apoptosis = false] strong basin: 0.049114227294921875 %\n",
       "A2 strong basin: 1.9208528101444244e-07 %\n",
       "A3 strong basin: 7.683411240577698e-07 %\n",
       "A2/A3 strong basin: 3.073364496231079e-06 %\n",
       "Undetermined: 37.26784971659072 %\n",
-      "Undetermined phenotype: 49.95088269934058 %\n"
+      "Undetermined phenotype: 49.95088269934058 %\n",
+      "Basic reachability done: 1152921469173366800[nodes:77] candidates. Max intermediate size: 302.\n",
+      "Start basic symbolic reachability with 4[nodes:60] candidates.\n",
+      "Basic reachability done: 431920877861339140[nodes:45] candidates. Max intermediate size: 2475.\n",
+      "Start basic symbolic reachability with 4[nodes:60] candidates.\n",
+      "Basic reachability done: 573642704001433600[nodes:37] candidates. Max intermediate size: 1339.\n"
      ]
     }
    ],
    "source": [
-    "A1_weak = reach_bwd(graph, A1)\n",
+    "A1_weak = Reachability.reach_bwd(graph, A1)\n",
     "\n",
-    "A2_weak = reach_bwd(graph, A2)\n",
-    "A3_weak = reach_bwd(graph, A3)\n",
+    "A2_weak = Reachability.reach_bwd(graph, A2)\n",
+    "A3_weak = Reachability.reach_bwd(graph, A3)\n",
     "\n",
-    "all_states_size = graph.unit_colored_vertices().vertices().cardinality()\n",
+    "all_states_size = graph.mk_unit_colored_vertices().vertices().cardinality()\n",
     "\n",
     "A1_strong = A1_weak.minus(A2_weak).minus(A3_weak)\n",
     "A1_strong_card = A1_strong.vertices().cardinality()\n",
@@ -535,6 +689,13 @@
     "\n",
     "\\[7] Ledbetter, Jeffrey A., et al. \"CD4, CD8 and the role of CD45 in T-cell activation.\" Current opinion in immunology 5.3 (1993): 334-340."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -559,9 +720,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
