--- a/example/workflow/XX-network-reductions.ipynb
+++ b/example/workflow/XX-network-reductions.ipynb
@@ -737,7 +737,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5374875 7401959 ; speedup 0.7261422280236894\n"
+      "5243166 7131625 ; speedup 0.7351993409636653\n"
      ]
     }
    ],
@@ -750,7 +750,7 @@
    "id": "c6c40932-a628-487c-84a1-58a664d34b43",
    "metadata": {},
    "source": [
-    "Note that in this simple case, the difference in runtime is measurable, but not substantial, since both methods effectively require milliseconds to complete.\n",
+    "Note that in this simple case, the difference in runtime is measurable, but not substantial, since both methods effectively require milliseconds to complete. In fact, depending on your hardware and run-to-run variance, the reduction method can be even slower.\n",
     "\n",
     "However, on larger or more complex networks, the reduction method can be much faster than the standard one (do take these numbers with a grain of salt though; a proper benchmark should at the very least average multiple runs or consider more than a handful of models):"
    ]
@@ -987,7 +987,7 @@
      "output_type": "stream",
      "text": [
       "ColoredVertexSet(cardinality=2, symbolic_size=191)\n",
-      "222279708 27989916 speedup 7.9414210460653045\n"
+      "216950334 25882541 speedup 8.382111091797363\n"
      ]
     }
    ],
